--- a/src/main/resources/templates/layout/user/User-SignUp.html
+++ b/src/main/resources/templates/layout/user/User-SignUp.html
@@ -10,21 +10,38 @@
         <h1>회원가입</h1>
     </div>
     <div>
-        <form>
+        <form id="signupvalue" novalidate>
             <div class="">
-                <input type="text" name="username" id="username" required="required">
+                <input type="text" name="username" id="username" required minlength="4" size="20">
                 <label for="username">아이디</label>
             </div>
             <div class="">
-                <input type="password" name="password" id="password" required="required">
+                <input type="password" name="password" id="password" required minlength="8" size="20">
                 <label for="password">비밀번호</label>
             </div>
             <div class="">
-                <input type="email" name="email" id="email" required="required">
+                <input type="email" name="email" id="email" required>
                 <label for="email">이메일</label>
             </div>
+            <div class="">
+                <input type="text" name="kakaotolkid" id="kakaotalkid">
+                <label for="kakaotalkid">카카오톡아이디</label>
+            </div>
+            <div class="">
+                <input type="text" name="instarid" id="instarid">
+                <label for="instarid">인스타아이디</label>
+            </div>
         </form>
+        <button class="w-100 btn btn-lg btn-success" id="savebtn">회원가입</button>
+
     </div>
 </main>
+<script> function btn(){ alert('버튼이 클릭되었습니다'); } </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script th:src="@{/js/user-value.js}"></script>
+<script th:src="@{/js/user.js}"></script>
+
 </body>
 </html>
