--- a/src/main/resources/templates/layout/user/User-SignUp.html
+++ b/src/main/resources/templates/layout/user/User-SignUp.html
@@ -24,8 +24,8 @@
                 <label for="email">이메일</label>
             </div>
             <div class="">
-                <input type="text" name="kakaotolkid" id="kakaotalkid">
-                <label for="kakaotalkid">카카오톡아이디</label>
+                <input type="text" name="kakaotalkid" id="kakaotalkid">
+                <label for="kakaotalkid">카카오스아이디 제발</label>
             </div>
             <div class="">
                 <input type="text" name="instarid" id="instarid">
