--- a/src/main/resources/templates/layout/user/user-login.html
+++ b/src/main/resources/templates/layout/user/user-login.html
@@ -24,15 +24,9 @@
             </div>
             <button class="" id="btn-login">로그인</button><!--button = type default값이 submit-->
         </form>
-        <button class="sign-up" onclick="location.href='/auth/signup'">회원가입</button>
+        <button class="sign-up" onclick="location.href='/auth/user/signup'">회원가입</button>
     </div>
 </main>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-<script sric="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script th:src="@{/js/user.js}"></script>
 </body>
 
