--- a/src/main/resources/templates/layout/user/User-SignUp.html
+++ b/src/main/resources/templates/layout/user/User-SignUp.html
@@ -11,6 +11,16 @@
     </div>
     <div>
         <form id="signupvalue" novalidate>
+            <div>
+                <div class="">
+                    <input type="text" name="email" id="email" required>
+                    <label for="email">이메일</label>
+                    <button type="button" id="emailduplicatebtn">이메일 중복확인</button>
+                    <button type="button" id="emailsubbtn">인증번호 발송</button>
+                    <input type="texst" name="checkvalue" id="checkvalue" >
+                    <button type="button" id="checkemailbtn" >인증번호 확인</button>
+                </div>
+            </div>
             <div class="">
                 <input type="text" name="username" id="username" required minlength="4" size="20">
                 <label for="username">아이디</label>
@@ -18,10 +28,6 @@
             <div class="">
                 <input type="password" name="password" id="password" required minlength="8" size="20">
                 <label for="password">비밀번호</label>
-            </div>
-            <div class="">
-                <input type="email" name="email" id="email" required>
-                <label for="email">이메일</label>
             </div>
             <div class="">
                 <input type="text" name="kakaotalkid" id="kakaotalkid">
@@ -32,7 +38,8 @@
                 <label for="instarid">인스타아이디</label>
             </div>
         </form>
-        <button class="w-100 btn btn-lg btn-success" id="savebtn">회원가입</button>
+        <button class="w-100 btn btn-lg btn-success" id="savebtn" name="savebtn" disabled>회원가입</button>
+        <button onclick="location.href='/auth/user/login'">로그인화면</button>
 
     </div>
 </main>
