--- a/src/main/resources/templates/layout/user/user-login.html
+++ b/src/main/resources/templates/layout/user/user-login.html
@@ -25,6 +25,7 @@
             <button class="" id="btn-login">로그인</button><!--button = type default값이 submit-->
         </form>
         <button class="sign-up" onclick="location.href='/auth/user/signup'">회원가입</button>
+        <a href="/auth/user/update">비밀번호 재설정</a>
     </div>
 </main>
 <script th:src="@{/js/user.js}"></script>
