--- a/src/main/resources/templates/layout/user/User-Management.html
+++ b/src/main/resources/templates/layout/user/User-Management.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en" class="h-100" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -38,6 +38,70 @@
 </div>
 <script> function btn(){alert('dkfja');}</script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script th:src="@{/js/user.js}"></script>
+<script th:src="@{/js/user-updatevalue.js}"></script>
+
+</body>
+
+</html>-->
+<!DOCTYPE html>
+<html lang="en" class="h-100" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image⁄x-icon" href="https://previews.123rf.com/images/siamimages/siamimages1604/siamimages160400083/54793402-%EA%B8%B0%EB%B3%B8-%EA%B8%80%EA%BC%B4-%EB
+          %AC%B8%EC%9E%90-k-%EC%95%84%EC%9D%B4%EC%BD%98-%EC%9D%BC%EB%9F%AC%EC%8A%A4%ED%8A%B8-%EB%94%94%EC%9E%90%EC%9D%B8.jpg">
+    <title>경푹톡에 가입하기</title>
+    <style type="text/css">
+        body{background-color: #E0FFFF}
+        #box{width: 300px; height: 400px; position : absolute; left :50%; top:50%; margin-left: -150px; margin-top: -200px;
+            text-align: center; border-radius: 20px; padding:10px;background-color: white;  box-shadow: 0px 0px 20px #000;}
+        #kakaotalkid{line-height: 25px; border-radius: 10px; font-size: 15px;}
+        #instarid{line-height: 25px; border-radius: 10px; font-size: 15px;}
+        #password{line-height: 25px; border-radius: 10px; font-size: 15px;}
+        #updatebtn{width: 150px; height:40px;border-radius: 10px; font-size: 20px;}
+        #back-main{width: 150px; height:40px;border-radius: 10px; font-size: 20px;}
+        #title{font-size: 50px; position: absolute; left:615px; top:50px; color: tomato; font-weight: bolder;}
+    </style>
+</head>
+<body>
+<div id="title">
+    KyungPookTok
+</div>
+<div id="box">
+    <table>
+        <tbody>
+        <tr>
+            <th> </th>
+            <td th:text="${title}"></td>
+            <td><STRONG value="${userkakaotalkid}"></STRONG> </td>
+        </tr>
+        </tbody>
+    </table><br><br>
+    <div>
+        <form id="updatevalue" novalidate>
+            <input type="hidden" id="id" th:value="${#authentication.principal.id}">
+            <div class="">
+                <input type= "text" id="kakaotalkid"placeholder="  카카오톡 아이디" th:value="${title.getKakaotalkid()}">
+                <label for="kakaotalkid"></label>
+            </div><br>
+            <div class="">
+                <input type= "text" id="instarid"placeholder="  인스타 아이디" th:value="${title.getInstarid()}">
+                <label for="instarid"></label>
+            </div><br>
+            <div class="">
+                <input type= "password" id="password" placeholder="  비밀번호">
+                <label for="password"></label><br>
+            </div><br><br>
+        </form>
+        <button id="updatebtn" class="w-100 btn btn-lg btn-success">정보수정</button><br><br>
+    </div>
+    <div>
+        <button id="back-main" onclick="location.href='/'">메인으로</button>
+    </div>
+    <script> function btn(){alert('dkfja');}</script>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script th:src="@{/js/user.js}"></script>
