--- a/src/main/resources/templates/layout/user/User-SignUp.html
+++ b/src/main/resources/templates/layout/user/User-SignUp.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en" class="h-100" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -51,4 +51,76 @@
 <script th:src="@{/js/user.js}"></script>
 
 </body>
+</html>-->
+<!DOCTYPE html>
+<html lang="en" class="h-100" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image⁄x-icon" href="https://previews.123rf.com/images/siamimages/siamimages1604/siamimages160400083/54793402-%EA%B8%B0%EB%B3%B8-%EA%B8%80%EA%BC%B4-%EB%AC%B8%EC%9E%90-k-%EC%95%
+          84%EC%9D%B4%EC%BD%98-%EC%9D%BC%EB%9F%AC%EC%8A%A4%ED%8A%B8-%EB%94%94%EC%9E%90%EC%9D%B8.jpg">
+    <title>경푹톡에 가입하기</title>
+    <style type="text/css">
+  body{background-color: #E0FFFF}
+  #box{width: 450px; height: 500px; position : absolute; left :50%; top:50%; margin-left: -200px; margin-top: -250px;
+          text-align: center; border-radius: 20px; padding:10px;background-color: white;  box-shadow: 0px 0px 20px #000;}
+#emailduplicatebtn{width: 110px; height:25px;border-radius: 10px; font-size: 12px;}
+#emailsubbtn{width: 95px; height:25px;border-radius: 10px; font-size: 12px;}
+#checkemailbtn{width: 110px; height:25px;border-radius: 10px; font-size: 12px;}
+#email{line-height: 25px; border-radius: 10px; font-size: 15px;}
+#checkvalue{line-height: 25px; border-radius: 10px; font-size: 15px;}
+#username{line-height: 25px; border-radius: 10px; font-size: 15px;}
+#password{line-height: 25px; border-radius: 10px; font-size: 15px;}
+#kakaotalkid{line-height: 25px; border-radius: 10px; font-size: 15px;}
+#instarid{line-height: 25px; border-radius: 10px; font-size: 15px;}
+
+    </style>
+</head>
+<body class="">
+<main class="sign-up">
+    <div id="box">
+        <h1>가입하기</h1>
+        <h2>빠르고 쉽습니다.</h2><hr>
+
+            <form id="signupvalue" novalidate>
+                <div>
+                    <div class="">
+                        <input type="text" name="email" id="email" required placeholder="  이메일">
+                        <label for="email"></label>
+                        <button type="button" id="emailduplicatebtn">이메일 중복확인</button>
+                        <button type="button" id="emailsubbtn" placeholder="인증번호 발송">인증번호 발송</button><br><br>
+                        <input type="texst" name="checkvalue" id="checkvalue" >
+                        <button type="button" id="checkemailbtn" >인증번호 확인</button>
+                    </div><br>
+                </div>
+                <div class="">
+                    <input type="text" name="username" id="username" required minlength="4" size="20" placeholder="  아이디">
+                    <label for="username"></label>
+                </div><br>
+                <div class="">
+                    <input type="password" name="password" id="password" required minlength="8" size="20" placeholder="  비밀번호">
+                    <label for="password"></label>
+                </div><br>
+                <div class="">
+                    <input type="text" name="kakaotalkid" id="kakaotalkid" placeholder="  카카오톡 아이디">
+                    <label for="kakaotalkid"> </label>
+                </div><br>
+                <div class="">
+                    <input type="text" name="instarid" id="instarid" placeholder="  인스타 아이디">
+                    <label for="instarid"> </label>
+                </div><br>
+            </form>
+            <button class="w-100 btn btn-lg btn-success" id="savebtn" name="savebtn" disabled>회원가입</button>
+            <button onclick="location.href='/auth/user/login'">로그인화면</button>
+
+    </div>
+</main>
+<script> function btn(){ alert('버튼이 클릭되었습니다'); } </script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script th:src="@{/js/user-value.js}"></script>
+<script th:src="@{/js/user.js}"></script>
+
+</body>
 </html>
+
