--- a/src/main/resources/templates/layout/user/user-login.html
+++ b/src/main/resources/templates/layout/user/user-login.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!--<!doctype html>
 <html lang="en" class="h-100" xmlns:th="http://www.thymeleaf.org">
 
 <body class="">
@@ -22,9 +22,63 @@
                     <input type="checkbox" value="remember-me"> Remember me
                 </label>
             </div>
-            <button class="" id="btn-login">로그인</button><!--button = type default값이 submit-->
+            <button class="" id="btn-login">로그인</button>
         </form>
         <button class="sign-up" onclick="location.href='/auth/user/signup'">회원가입</button>
+        <a href="/auth/user/update">비밀번호 재설정</a>
+        <a sec:authorize="isAnonymous()" class="nav-link" href="/user/chat">회coxld</a>
+
+    </div>
+</main>
+<script th:src="@{/js/user.js}"></script>
+
+</body>
+
+</html>-->
+<!doctype html>
+<html lang="en" class="h-100" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image⁄x-icon" href="https://previews.123rf.com/images/siamimages/siamimages1604/siamimages160400083/54793402-%EA%B8%B0%EB%B3%B8-%EA%B8%80%EA%
+  BC%B4-%EB%AC%B8%EC%9E%90-k-%EC%95%84%EC%9D%B4%EC%BD%98-%EC%9D%BC%EB%9F%AC%EC%8A%A4%ED%8A%B8-%EB%94%94%EC%9E%90%EC%9D%B8.jpg">
+    <title>경푹톡에 로그인</title>
+    <style type="text/css">
+        body{background-color: #E0FFFF}
+        .loginclass{width: 300px; height: 400px; position : absolute; left :50%; top:50%; margin-left: -150px; margin-top: -200px;
+            text-align: center; border-radius: 20px; padding:10px;background-color: white;  box-shadow: 0px 0px 20px #000;}
+        #title{font-size: 50px; position: absolute; left:615px; top:50px; color: tomato; font-weight: bolder;}
+        #username{line-height: 25px; border-radius: 10px; font-size: 15px;}
+        #password{line-height: 25px; border-radius: 10px; font-size: 15px;}
+        .login{width: 150px; height:40px;border-radius: 10px; font-size: 20px;}
+        .sign-up{width: 150px; height:40px;border-radius: 10px; font-size: 20px;}
+
+
+    </style>
+</head>
+<body class="">
+<main class="form-signin">
+    <div id="title">
+        KyungPookTok
+    </div>
+    <div class="loginclass">
+        <form action="/auth/user/login" method="post">
+            <h1 class="">로그인</h1>
+            <div>
+                <input type="text" name="username" id="username" placeholder="  아이디" required="required" size="30">
+                <label for="username"></label>
+            </div><br>
+            <div>
+                <input type="password" name="password"id="password" placeholder="  비밀번호" required="required" size="30">
+                <label for="password"></label>
+            </div>
+            <div class="">
+                <label>
+                    <input type="checkbox" value="remember-me"> 회원정보 기억
+                </label><br><br>
+            </div>
+            <button class="login" id="btn-login">로그인</button><!--button = type default값이 submit--><br><br>
+        </form>
+        <button class="sign-up" onclick="location.href='/auth/user/signup'">회원가입</button><br><br>
         <a href="/auth/user/update">비밀번호 재설정</a>
     </div>
 </main>
