--- a/src/main/resources/templates/layout/user/User-Delete.html
+++ b/src/main/resources/templates/layout/user/User-Delete.html
@@ -25,6 +25,7 @@
 </header>
 
 <main>
+
     <div id="box">
         <h2>본인확인을 위해<br>비밀번호를 입력하세요.</h2>
         <div>
@@ -35,15 +36,20 @@
                 <div>
                     <input type="password" id="password" name="password" placeholder="비밀번호" size="30">
                 </div>
+
             </form><br><br><br>
-            <button id="deletebtn" name="deletebtn">회원탈퇴</button><br><br><br>
+            <button id="deletebtn">회원탈퇴</button><br><br><br>
+
             <button id="main" onclick="location.href='/'">메인으로</button>
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script th:src="@{/js/user-deletevalue.js}"></script>
+    <script th:src="@{/js/user.js}"></script>
 
 </main>
-<script th:src="@{/user.js}"></script>
 </body>
 
 </html>
