2/20 채팅방나가기기능

--- a/src/main/resources/templates/layout/chat/randomchat.html
+++ b/src/main/resources/templates/layout/chat/randomchat.html
@@ -17,6 +17,8 @@
         <textarea id="chat-content" rows="30" style="width:100%;" readonly></textarea>
     </div>
     <div class="row" id="chat-action-div"></div>
+    <button onclick="location.href='/'" id="cancel">종료</button>
+    <H1 th:text="${userid}"></H1>
 </div>
 
 <script th:src="@{/js/app.js}"></script>
