--- a/src/main/resources/templates/layout/user/help/User-Password.html
+++ b/src/main/resources/templates/layout/user/help/User-Password.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -8,14 +8,18 @@
 <form id="signupvalue" novalidate>
     <div>
         <div class="">
-            <input type="text" name="email" id="email" required>
-            <label for="email">이메일</label>
+
+            <input type="text" name="email" id="email1" required placeholder="  이메일">
+            <input type="text" name="emai2" id="email2" value="@knu.ac.kr" readonly>
             <button type="button" id="emailsubbtn">인증번호 발송</button>
-            <input type="texst" name="checkvalue" id="checkvalue" >
+            <input type="text" name="checkvalue" id="checkvalue" >
             <button type="button" id="checkemailbtn" >인증번호 확인</button>
+            <button type="button" id="idcon" th:href="" disabled>다음</button>
         </div>
     </div>
 </form>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script th:src="@{/js/user.js}"></script>
 </html>
