--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -22,7 +22,7 @@
 <header id="head">
     kyungpooktok
 </header>
-<h1 id = "head2">Kyungpooktok에서 경북대학교에 있는<br> 이성들과 함께 이야기를 나눠보세요.</h1>
+<h1 id = "head2">Kyungpooktok에서 경북대학교에 있는<br> 사람들과 함께 이야기를 나눠보세요.</h1>
 <div class="my-box">
     <form action="/user/management" method="post"></form><br><br>
     <a sec:authorize="isAuthenticated()" class="nav-link" href="/user/management">회원정보</a><br><hr>
